--- a/1. basics start up projects/index.html
+++ b/1. basics start up projects/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Basics</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/styles/app.css" />
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./assets/css/style.min.css"/>
   </head>
   <body>
     <header>
@@ -31,8 +29,7 @@
     </section>
 
     <script src="./assets/scripts/vendor.js"></script>
-    <script src="./assets/scripts/app.js">
-    </script>
+    <script src="./assets/scripts/app.js"></script>
 
   </body>
 </html>
